--- a/app/templates/admin/admin.html
+++ b/app/templates/admin/admin.html
@@ -44,15 +44,15 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <img src="{{ url_for('static',filename='admin/dist/img/user2-160x160.jpg') }}"
                                  class="user-image" alt="User Image">
-                            <span class="hidden-xs">xxx</span>
+                            <span class="hidden-xs">{{ session['admin'] }}</span>
                         </a>
                         <ul class="dropdown-menu">
                             <li class="user-header">
                                 <img src="{{ url_for('static',filename='admin/dist/img/user2-160x160.jpg') }}"
                                      class="img-circle" alt="User Image">
                                 <p>
-                                    xxx
-                                    <small>2017-06-01</small>
+                                    {{ session['admin'] }}
+                                    <small>{{ online_time }}</small>
                                 </p>
                             </li>
                             <li class="user-footer">
@@ -60,7 +60,7 @@
                                     <a href="{{ url_for('admin.pwd') }}" class="btn btn-default btn-flat">修改密码</a>
                                 </div>
                                 <div class="pull-right">
-                                    <a href="{{ url_for('admin.login') }}" class="btn btn-default btn-flat">退出系统</a>
+                                    <a href="{{ url_for('admin.logout') }}" class="btn btn-default btn-flat">退出系统</a>
                                 </div>
                             </li>
                         </ul>
@@ -77,7 +77,7 @@
                          alt="User Image">
                 </div>
                 <div class="pull-left info">
-                    <p>用户xxx</p>
+                    <p>用户{{ session['admin'] }}</p>
                     <a href="#"><i class="fa fa-circle text-success"></i> 在线</a>
                 </div>
             </div>
