--- a/app/templates/admin/tag_edit.html
+++ b/app/templates/admin/tag_edit.html
@@ -5,8 +5,8 @@
     <section class="content-header">
         <h1>微电影管理系统</h1>
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> 预告管理</a></li>
-            <li class="active">添加预告</li>
+            <li><a href="#"><i class="fa fa-dashboard"></i> 标签管理</a></li>
+            <li class="active">修改标签</li>
         </ol>
     </section>
     <section class="content" id="showcontent">
@@ -14,9 +14,9 @@
             <div class="col-md-12">
                 <div class="box box-primary">
                     <div class="box-header with-border">
-                        <h3 class="box-title">添加预告</h3>
+                        <h3 class="box-title">修改标签</h3>
                     </div>
-                    <form role="form" method="post" enctype="multipart/form-data">
+                    <form role="form" method="POST">
                         <div class="box-body">
                             {% for msg in get_flashed_messages(category_filter=["ok"]) %}
                                 <div class="alert alert-success alert-dismissible">
@@ -26,25 +26,23 @@
                                     {{ msg }}
                                 </div>
                             {% endfor %}
+                            {% for msg in get_flashed_messages(category_filter=["err"]) %}
+                                <div class="alert alert-danger alert-dismissible">
+                                    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×
+                                    </button>
+                                    <h4><i class="icon fa fa-ban"></i> 操作失败</h4>
+                                    {{ msg }}
+                                </div>
+                            {% endfor %}
                             <div class="form-group">
-                                <label for="input_title">{{ form.title.label }}</label>
-                                {{ form.title }}
-                                {% for err in form.title.errors %}
+                                <label for="input_name">{{ form.name.label }}</label>
+                                {{ form.name(value=tag.name) }}
+                                {#            名称错误信息#}
+                                {% for err in form.name.errors %}
                                     <div class="col-md-12">
                                         <font style="color: red">{{ err }}</font>
                                     </div>
                                 {% endfor %}
-                            </div>
-                            <div class="form-group">
-                                <label for="input_logo">{{ form.logo.label }}</label>
-                                {{ form.logo }}
-                                {% for err in form.logo.errors %}
-                                    <div class="col-md-12">
-                                        <font style="color: red">{{ err }}</font>
-                                    </div>
-                                {% endfor %}
-                                <img data-src="holder.js/700x320" style="margin-top:5px;" class="img-responsive"
-                                     alt="">
                             </div>
                         </div>
                         <div class="box-footer">
@@ -62,8 +60,8 @@
 {% block js %}
     <script>
         $(document).ready(function () {
-            $('#g-4').addClass('active');
-            $('#g-4-1').addClass('active');
+            $('#g-2').addClass('active');
+            $('#g-2-1').addClass('active');
         })
     </script>
 {% endblock %}
