--- a/app/templates/admin/auth_edit.html
+++ b/app/templates/admin/auth_edit.html
@@ -6,8 +6,8 @@
     <section class="content-header">
         <h1>微电影管理系统</h1>
         <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> 管理员管理</a></li>
-            <li class="active">添加管理员</li>
+            <li><a href="#"><i class="fa fa-dashboard"></i> 权限管理</a></li>
+            <li class="active">修改权限</li>
         </ol>
     </section>
     <section class="content" id="showcontent">
@@ -15,7 +15,7 @@
             <div class="col-md-12">
                 <div class="box box-primary">
                     <div class="box-header with-border">
-                        <h3 class="box-title">添加管理员</h3>
+                        <h3 class="box-title">修改权限</h3>
                     </div>
                     <form role="form" method="post">
                         <div class="box-body">
@@ -29,7 +29,7 @@
                             {% endfor %}
                             <div class="form-group">
                                 <label for="input_name">{{ form.name.label }}</label>
-                                {{ form.name }}
+                                {{ form.name(value=auth.name) }}
                                 {% for err in form.name.errors %}
                                     <div class="col-md-12">
                                         <font style="color: red">{{ err }}</font>
@@ -37,27 +37,9 @@
                                 {% endfor %}
                             </div>
                             <div class="form-group">
-                                <label for="input_pwd">{{ form.pwd.label }}</label>
-                                {{ form.pwd }}
-                                {% for err in form.pwd.errors %}
-                                    <div class="col-md-12">
-                                        <font style="color: red">{{ err }}</font>
-                                    </div>
-                                {% endfor %}
-                            </div>
-                            <div class="form-group">
-                                <label for="input_re_pwd">{{ form.repwd.label }}</label>
-                                {{ form.repwd }}
-                                {% for err in form.repwd.errors %}
-                                    <div class="col-md-12">
-                                        <font style="color: red">{{ err }}</font>
-                                    </div>
-                                {% endfor %}
-                            </div>
-                            <div class="form-group">
-                                <label for="input_role_id">{{ form.role_id.label }}</label>
-                                {{ form.role_id }}
-                                {% for err in form.role_id.errors %}
+                                <label for="input_url">{{ form.url.label }}</label>
+                                {{ form.url(value=auth.url) }}
+                                {% for err in form.url.errors %}
                                     <div class="col-md-12">
                                         <font style="color: red">{{ err }}</font>
                                     </div>
@@ -80,8 +62,8 @@
 {% block js %}
     <script>
         $(document).ready(function () {
-            $('#g-11').addClass('active');
-            $('#g-11-1').addClass('active');
+            $('#g-9').addClass('active');
+            $('#g-9-1').addClass('active');
         })
     </script>
 {% endblock %}
