数据模型设计+搭建前台页面+搭建后台页面+后台管理+基于角色的访问控制+会员模块+电影模块+评论收藏及弹幕

--- a/app/templates/admin/comment_list.html
+++ b/app/templates/admin/comment_list.html
@@ -51,9 +51,15 @@
                         {% endfor %}
                         {% for v in page_data.items %}
                             <div class="box-comment">
+                            {% if v.user.face %}
                                 <img class="img-circle img-sm"
-                                     src="{{ url_for('static',filename='uploads/user/'+v.user.face) }}"
+                                     src="{{ url_for('static',filename='uploads/users/'+v.user.face) }}"
                                      alt="User Image">
+                                    {% else %}
+                                <img class="img-circle img-sm"
+                                     data-src="holder.js/50x50"
+                                     alt="User Image">
+                                {% endif %}
                                 <div class="comment-text">
                                     <span class="username">
                                         {{ v.user.name }}
