--- a/app/templates/admin/admin_add.html
+++ b/app/templates/admin/admin_add.html
@@ -56,7 +56,9 @@
                             </div>
                             <div class="form-group">
                                 <label for="input_role_id">{{ form.role_id.label }}</label>
+                            {% if form.role_id != "1" %}
                                 {{ form.role_id }}
+                            {% endif %}
                                 {% for err in form.role_id.errors %}
                                     <div class="col-md-12">
                                         <font style="color: red">{{ err }}</font>
