--- a/app/templates/admin/role_list.html
+++ b/app/templates/admin/role_list.html
@@ -47,16 +47,22 @@
                                 <th>操作事项</th>
                             </tr>
                             {% for v in page_data.items %}
-                                <tr>
-                                    <td>{{ v.id }}</td>
-                                    <td>{{ v.name }}</td>
-                                    <td>{{ v.addtime }}</td>
-                                    <td>
-                                        <a href="{{ url_for('admin.role_edit',id=v.id) }}" class="label label-success">编辑</a>
-                                        &nbsp;
-                                        <a href="{{ url_for('admin.role_del',id=v.id) }}" class="label label-danger">删除</a>
-                                    </td>
-                                </tr>
+                                {% if v.id != 1 %}
+                                    <tr>
+                                        <td>{{ v.id }}</td>
+                                        <td>{{ v.name }}</td>
+                                        <td>{{ v.addtime }}</td>
+                                        <td>
+                                            <a href="{{ url_for('admin.role_edit',id=v.id) }}"
+                                               class="label label-success">编辑</a>
+                                            &nbsp;
+
+                                            <a href="{{ url_for('admin.role_del',id=v.id) }}"
+                                               class="label label-danger">删除</a>
+
+                                        </td>
+                                    </tr>
+                                {% endif %}
                             {% endfor %}
                             </tbody>
                         </table>
