--- a/app/templates/admin/user_list.html
+++ b/app/templates/admin/user_list.html
@@ -56,18 +56,24 @@
                                     <td>{{ v.email }}</td>
                                     <td>{{ v.phone }}</td>
                                     <td>
-                                        <img src="{{ url_for('static', filename='uploads/users/'+v.face) }}"
-                                             style="width: 50px; height: 50px;" class="img-responsive center-block"
-                                             alt="">
+                                        {% if v.face %}
+                                            <img src="{{ url_for('static', filename='uploads/users/'+v.face) }}"
+                                                 style="width: 50px; height: 50px;" class="img-responsive center-block"
+                                                 alt="">
+                                        {% else %}
+                                            <img data-src="holder.js/50x50"
+                                                 style="width: 50px; height: 50px;" class="img-responsive center-block"
+                                                 alt="">
+                                        {% endif %}
                                     </td>
                                     <td>正常/冻结</td>
                                     <td>{{ v.addtime }}</td>
                                     <td>
                                         <a class="label label-success"
-                                           href="{{ url_for('admin.user_view', v.id) }}">查看</a>
+                                           href="{{ url_for('admin.user_view', id=v.id) }}">查看</a>
                                         &nbsp;
                                         <a class="label label-danger"
-                                           href="{{ url_for('admin.user_del', v.id) }}">删除</a>
+                                           href="{{ url_for('admin.user_del', id=v.id) }}">删除</a>
                                     </td>
                                 </tr>
                             {% endfor %}
